[package]
name = "pd-rs-common"
version = "0.2.2"
edition = "2024"
authors = [
    "intfish123 <intfish@qq.com>",
]
description = "Rust common lib"
documentation = "https://docs.rs/pd-rs-common"
repository = "https://github.com/intfish123/pd-rs-common"
readme = "README.md"
keywords = ["rust", "common", "nacos"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter", "fmt", "chrono", "time", "local-time"] }
atty = "0.2"  # 用于检测终端是否支持 ANSI 颜色
toml="0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
nacos-sdk = { version = "0.5", features = ["default"] }
local-ip-address = "0.6.3"
dashmap = { version = "6.1", features = ["serde"] }
crossbeam = "0.8"
num_cpus = "1"
mur3="0.1"
chrono="0.4"
rand = "0.8.5"
async-broadcast="0.7"